# chainlink

./: .babelrc  .codeclimate.yml  .ct.yml  .dockerignore  .env  .eslintignore  .eslintrc  .eslintrc.js  .gas-snapshot  .gitignore  .gitmodules  .golangci.yml  .goreleaser-template.yaml  .goreleaser.ccip.develop.yaml  .goreleaser.ccip.production.yaml  .goreleaser.develop.ci.yaml  .goreleaser.develop.local.yaml  .goreleaser.develop.yaml  .goreleaser.devspace-arm.yaml  .goreleaser.devspace.yaml  .goreleaser.production.yaml  .goreleaser.yaml  .mockery.yaml  .nancy-ignore  .npmrc  .nvmrc  .prettierignore  .prettierrc.js  .rgignore  .sailsrc  .solhint.json  .solhintignore  .soliumignore  .soliumrc.json  .swp  .tarignore  .tool-versions  .travis.backup.yml  .travis.yml  .yarnrc  (+126 more)
.changeset/: afraid-baboons-nail.md  afraid-buckets-yell.md  afraid-cameras-laugh.md  afraid-cups-scream.md  afraid-plums-look.md  angry-fishes-ring.md  angry-hounds-roll.md  angry-spiders-report.md  angry-wolves-fix.md  beige-eels-teach.md  beige-socks-cover.md  beige-tables-visit.md  big-bats-grin.md  big-dots-report.md  big-kiwis-cross.md  big-students-rush.md  big-trees-help.md  big-windows-lie.md  blue-camels-begin.md  blue-camels-promise.md  blue-geckos-tap.md  blue-phones-rest.md  blue-pumpkins-sniff.md  blue-roses-brush.md  brave-ads-explode.md  brave-dots-breathe.md  brave-games-drop.md  breezy-eggs-glow.md  breezy-pears-cough.md  breezy-planets-drop.md  breezy-taxis-breathe.md  breezy-walls-cross.md  breezy-weeks-watch.md  bright-beers-compete.md  bright-crabs-live.md  bright-queens-joke.md  bright-readers-dress.md  brown-geese-boil.md  brown-penguins-grin.md  brown-rings-allow.md  (+720 more)
.circleci/: config.yml  config2.yml
.githooks/: .gitignore  pre-push
.github/: CODEOWNERS  E2E_TESTS_ON_GITHUB_CI.md  FUNDING.yml  ISSUE_TEMPLATE.md  README.md  codecov.yml  cr.yaml  dependabot.yml  e2e-tests.yml  log_poller_on_demand.yml  pull_request_template.md  stale.yml  workflows-scan.yml
.packr/: main.go
.storybook/: addons.js  config.js  webpack.config.js
CHECK_IN/: CHECK_IN.md  CHECK_IN_CN.md
adapters/: adapter.go  adapter_test.go  bridge.go  bridge_test.go  copy.go  copy_test.go  doc.go  eth_bool.go  eth_bool_test.go  eth_format.go  eth_format_test.go  eth_tx.go  eth_tx_test.go  external_bridge.go  external_bridge_test.go  http.go  http.h  http_get.go  http_get_test.go  http_sgx.go  http_test.go  json_parse.go  json_parse_test.go  map.go  map_test.go  multiply.go  multiply_sgx.go  multiply_test.go  no_op.go  sleep.go  sleep_test.go  wasm.go  wasm_sgx.go  wasm_test.go
beholderdemo/: start.sh
belt/: .gitignore  README.md  jest.config.js  oclif.manifest.json  package.json  tsconfig.json
box/: package.json  truffle-config.js
builder/: Dockerfile  GNUmakefile  README.md
ccip/: ccip.Dockerfile
charts/: chainlink-cluster.md
check_in_irita/: check_in.md  check_in_cn.md
client/: Dockerfile  nginx.conf  package.json  tsconfig.json
clroot/: cookie  secret
cmd/: .renderer.go.swp  api_initializer.go  app.go  authenticator.go  authenticator_test.go  client.go  client_local.go  client_remote.go  client_test.go  doc.go  enclave_sgx.go  key_store_authenticator.go  key_store_authenticator_test.go  local_client.go  local_client_test.go  prompter.go  remote_client.go  remote_client_test.go  renderer.go  renderer_test.go  user_initializer.go
commands/: commands.go  commands_test.go  renderer.go
config/: bootstrap.js  config.go  datastores.js  globals.js  local.js  models.js  routes.js  session.js  sockets.js  views.js
contracts/: .ccip-solhint-ignore  .eslintignore  .eslintrc.js  .forgeignore  .gas-snapshot  .gitignore  .prettierignore  .prettierrc  .prettierrc.js  .slither.config-artifacts.json  .slither.config-ci.json  .slither.config-pr.json  .solcover.js  .solhint.json  .solhintignore  CHANGELOG.md  GNUmakefile  LinkToken.json  README.md  STYLE.md  STYLE_GUIDE.md  ci.json  detect_diff.sh  flatten_generate_uml.sh  foundry.md  foundry.toml  hardhat.ccip.zksync.config.ts  hardhat.config.js  hardhat.config.ts  package-lock.json  package.json  pnpm-lock.yaml  remappings.txt  slither-results.md  style.md  test.sh  test_compilation.sh  tsconfig.json  v1.0-CCIP-License-grants.md
core/: .gitignore  .goreleaser.yaml  .tool-versions  README.md  chainlink-sgx.Dockerfile  config.go  (+10 more)
core/sgx/bigdecimal-rs/: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.rst
core/sgx/bigdecimal-rs/examples/: floating-precision.rs
core/sgx/bigdecimal-rs/src/: lib.rs
core/sgx/enclave/: Cargo.toml  enclave.config.xml  enclave.lds  key.pem
core/sgx/enclave/src/: lib.rs  result.rs
core/sgx/libadapters/: Cargo.toml  adapters.h  build.rs
core/sgx/libadapters/src/: multiply.rs  wasm.rs
multiply_wasm/: Cargo.toml  README.md
multiply_wasm/src/: lib.rs
sgx/bigdecimal-rs/: .gitignore  .travis.yml  COPYRIGHT  Cargo.toml  LICENSE-APACHE  README.rst
sgx/bigdecimal-rs/examples/: repeated_squares.rs
sgx/bigdecimal-rs/src/: lib.rs  macros.rs
sgx/enclave/: Cargo.toml  enclave.config.xml  enclave.edl
sgx/enclave/sgxwasm/: Cargo.toml
sgx/enclave/sgxwasm/src/: lib.rs
sgx/enclave/src/: attestation.rs  hex.rs  lib.rs  multiply.rs  result.rs  util.rs  wasm.rs
sgx/libadapters/: Cargo.toml  adapters.h  build.rs
sgx/libadapters/src/: attestation.rs  http.rs  lib.rs  multiply.rs  util.rs  wasm.rs
sgx/num/: Cargo.toml  Xargo.toml
sgx/num/derive/: Cargo.toml
sgx/num/derive/src/: lib.rs
sgx/num/derive/tests/: empty_enum.rs  trivial.rs  with_custom_values.rs
sgx/num/derive/tests/compile-fail/from-primitive/: derive_on_struct.rs  enum_with_associated_data.rs
sgx/num/derive/tests/compile-fail/to-primitive/: derive_on_struct.rs  enum_with_associated_data.rs
sgx/num/integer/: Cargo.toml  Xargo.toml
sgx/num/integer/src/: lib.rs
sgx/num/iter/: Cargo.toml
sgx/num/iter/src/: lib.rs
sgx/num/src/: lib.rs
sgx/num/traits/: Cargo.toml
sgx/num/traits/src/: bounds.rs  cast.rs  float.rs  identities.rs  int.rs  lib.rs  pow.rs  sign.rs
sgx/num/traits/src/ops/: checked.rs  mod.rs  saturating.rs  wrapping.rs
(+17318 files in other folders)
