[package]
name = "enclave"
version = "0.1.0"
authors = ["John Barker <john@smartcontract.com>"]

[lib]
name = "enclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
num = { path = "/opt/rust-sgx-sdk/third_party/num" }
lazy_static = { path = "/opt/rust-sgx-sdk/third_party/lazy-static.rs" }
serde = { path = "/opt/rust-sgx-sdk/third_party/serde-rs/serde/serde" }
serde_json = { path = "/opt/rust-sgx-sdk/third_party/serde-rs/json"}
sgxwasm = { path = "sgxwasm" }
wabt-core = { path = "/opt/rust-sgx-sdk/third_party/wabt-rs-core" }
wasmi = { path = "/opt/rust-sgx-sdk/third_party/wasmi" }
base64 = { path = "/opt/rust-sgx-sdk/third_party/rust-base64" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { path = "/opt/rust-sgx-sdk/sgx_tstd" }
sgx_types = { path = "/opt/rust-sgx-sdk/sgx_types" }
