[package]
name = "adapters"
version = "0.1.0"
authors = ["John Barker <john@smartcontract.com>"]
build = "build.rs"

[lib]
crate-type = ["cdylib"]
# FIXME: Want to link statically but need static versions of the sgx libraries
#crate-type = ["staticlib"]
#lto = false

[features]
default = []
global_init = []
global_exit = []

[dependencies]
crossbeam = "0.5.0"
errno = "0.2.3"
libc = "*"
utils = { path = "../utils" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_trts = { path = "/opt/rust-sgx-sdk/sgx_trts" }
sgx_types = { path = "/opt/rust-sgx-sdk/sgx_types" }
sgx_urts = { path = "/opt/rust-sgx-sdk/sgx_urts" }
