[package]
authors = ["The Rust Project Developers"]
description = "A collection of numeric types and traits for Rust, including bigint,\ncomplex, rational, range iterators, generic integers, and more!\n"
documentation = "http://rust-num.github.io/num"
homepage = "https://github.com/rust-num/num"
keywords = ["mathematics", "numerics", "bignum"]
categories = [ "algorithms", "data-structures", "science" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-num/num"
name = "num"
version = "0.1.40"

[badges]
travis-ci = { repository = "rust-num/num" }

[dependencies]

[dependencies.num-integer]
path = "./integer"

[dependencies.num-iter]
optional = false
path = "./iter"

[dependencies.num-traits]
path = "./traits"

[dependencies.num-derive]
path = "./derive"

[dev-dependencies]

