[package]
name = "enclave"
version = "0.1.0"
authors = ["John Barker <john@smartcontract.com>"]

[lib]
name = "enclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx.git" }
bigdecimal = { path = "../bigdecimal-rs" }
num = { git = "https://github.com/mesalock-linux/num-sgx.git" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git" }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx.git"}
utils = { path = "../utils", default-features = false }
wabt = { git = "https://github.com/mesalock-linux/wabt-rs-sgx.git" }
wasmi = { git = "https://github.com/mesalock-linux/wasmi-sgx.git" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_rand = { path = "/opt/rust-sgx-sdk/sgx_rand" }
sgx_tcrypto = { path = "/opt/rust-sgx-sdk/sgx_tcrypto" }
sgx_tse = { path = "/opt/rust-sgx-sdk/sgx_tse" }
sgx_tstd = { path = "/opt/rust-sgx-sdk/sgx_tstd" }
sgx_types = { path = "/opt/rust-sgx-sdk/sgx_types" }
