[package]
name = "adapters"
version = "0.1.0"
authors = ["John Barker <dev@j16r.net>"]
build = "build.rs"

[lib]
crate-type = ["cdylib"]
# FIXME: Want to link statically but need static versions of the sgx libraries
#crate-type = ["staticlib"]
#lto = false

[features]
default = []
global_init = []
global_exit = []

[dependencies]
errno = "0.2.3"
lazy_static = "1.0.0"
libc = "*"
utils = { path = "../utils" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_trts = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
