[package]
name = "sgxwasm"
version = "0.1.0"
authors = ["Baidu"]

[dependencies]
serde = { path = "/opt/rust-sgx-sdk/third_party/serde-rs/serde/serde" }
serde_derive = { path = "/opt/rust-sgx-sdk/third_party/serde-rs/serde/serde_derive"}
serde_json = { path = "/opt/rust-sgx-sdk/third_party/serde-rs/json"}
wabt-core = { path = "/opt/rust-sgx-sdk/third_party/wabt-rs-core" }
wasmi = { path = "/opt/rust-sgx-sdk/third_party/wasmi" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { path = "/opt/rust-sgx-sdk/sgx_tstd" }
sgx_types = { path = "/opt/rust-sgx-sdk/sgx_types" }
