[package]
authors = ["The Rust Project Developers"]
description = "Numeric syntax extensions"
documentation = "http://rust-num.github.io/num"
homepage = "https://github.com/rust-num/num"
keywords = ["mathematics", "numerics"]
categories = [ "science" ]
license = "MIT/Apache-2.0"
name = "num-derive"
repository = "https://github.com/rust-num/num"
version = "0.1.41"

[dependencies]
quote = "0.1.3"
syn = "0.7.0"

[dev-dependencies]
compiletest_rs = "0.2.5"

[dev-dependencies.num]
path = ".."
version = "0.1"

[lib]
name = "num_derive"
proc-macro = true
test = false
