[package]
authors = ["The Rust Project Developers"]
description = "Integer traits and functions"
documentation = "http://rust-num.github.io/num"
homepage = "https://github.com/rust-num/num"
keywords = ["mathematics", "numerics"]
categories = [ "algorithms", "science" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-num/num"
name = "num-integer"
version = "0.1.35"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = "=1.0.0"

[dependencies.num-traits]
path = "../traits"
version = "0.1.32"
