[package]
authors = ["The Rust Project Developers"]
description = "External iterators for generic mathematics"
documentation = "http://rust-num.github.io/num"
homepage = "https://github.com/rust-num/num"
keywords = ["mathematics", "numerics"]
categories = [ "algorithms", "science" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-num/num"
name = "num-iter"
version = "0.1.34"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = "=1.0.0"

[dependencies.num-integer]
optional = false
path = "../integer"
version = "0.1.32"

[dependencies.num-traits]
optional = false
path = "../traits"
version = "0.1.32"
