[package]
authors = ["The Rust Project Developers"]
description = "Numeric traits for generic mathematics"
documentation = "http://rust-num.github.io/num"
homepage = "https://github.com/rust-num/num"
keywords = ["mathematics", "numerics"]
categories = [ "algorithms", "science" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-num/num"
name = "num-traits"
version = "0.1.40"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = "=1.0.0"
